--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Procedural Maze Escape</title>
+<title>Way Out</title>
 <style>
   html,body{height:100%;margin:0;background:#111;overflow:hidden;font-family:system-ui,Segoe UI,Roboto,Arial}
   #ui{position:fixed;left:12px;top:12px;z-index:30;color:#fff;font-weight:600;text-shadow:0 1px 0 rgba(0,0,0,.6)}
@@ -242,3 +242,4 @@ window._game = {state, newLevel, tryMove};
 </script>
 </body>
 </html>
+
