--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Way Out</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
   html,body{height:100%;margin:0;background:#111;overflow:hidden;font-family:system-ui,Segoe UI,Roboto,Arial}
   #ui{position:fixed;left:12px;top:12px;z-index:30;color:#fff;font-weight:600;text-shadow:0 1px 0 rgba(0,0,0,.6)}
@@ -255,3 +256,4 @@ window._game = {state, newLevel, tryMove};
 </script>
 </body>
 </html>
+
